# Toybox-Studio

./: .gitignore  AGENTS.md  App.axaml  App.axaml.cs  Directory.Build.props  LICENSE  Program.cs  README.md  Result.cs  Toybox.Studio.csproj  Toybox.Studio.slnx  app.manifest  appsettings.json
Assets/Templates/DefaultProject/: .gitignore  AppSettings.json  CMakeLists.txt  CMakePresets.json
Assets/Templates/DefaultProject/Assets/Materials/: Grass.mat  Sky.mat
Assets/Templates/DefaultProject/Assets/Worlds/: Default.chunk  Default.globals  Default.world
Assets/Templates/DefaultProject/Source/: template_app.cpp  template_app.h
Controls/: SearchBox.axaml  SearchBox.axaml.cs
Dialogs/: AssetPicker.cs  FilePicker.cs  FileReveal.cs  Popups.cs
ECS/: Component.cs  Entity.cs  World.cs
EngineApi/: ConnectionState.cs  Engine.cs  EngineRpc.cs  EngineState.cs  EngineWatcher.cs  InstanceDetector.cs  JsonParser.cs  Locator.cs  Session.cs  ViewKind.cs  ViewportStream.cs
Logging/: LogEntry.cs  LogFile.cs  LogLevel.cs  Logger.cs
Models/: Asset.cs  EditorSettings.cs
Project/: AssetCatalog.cs  CMakeCompiler.cs  ProjectManager.cs  Settings.cs
Services/: AssetCatalog.cs  CMakeCompiler.cs  CommandRunner.cs  Dialogs.cs  EngineConnectionState.cs  EngineInstanceDetector.cs  EngineJsonParser.cs  EngineLaunchOptions.cs  EngineLocator.cs  EngineLogEntry.cs  EngineProcess.cs  EngineRpcClient.cs  EngineSceneService.cs  EngineSession.cs  EngineSessionService.cs  EngineViewportService.cs  FilePicker.cs  LogEntry.cs  LogFile.cs  Logger.cs  ProjectManager.cs  PropertyNode.cs  SceneNode.cs  SceneSelectionService.cs  Settings.cs  Theme.cs  ThemeManager.cs  ThemeMode.cs  ViewAttribute.cs  ViewportStream.cs  WorldDescription.cs  WorldManager.cs  WorldNode.cs  WorldSelection.cs
Settings/: SettingsView.axaml  SettingsView.axaml.cs  SettingsViewModel.cs
Shell/: AppStyles.axaml  CommandRunner.cs  MainWindow.axaml  MainWindow.axaml.cs  MenuActionViewModel.cs  MessageBoxWindow.axaml  MessageBoxWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  SettingsViewModel.cs  Shell.axaml  Shell.axaml.cs  ShellStyles.axaml  ShellViewModel.cs  SplashViewModel.cs  SplashWindow.axaml  SplashWindow.axaml.cs  ThemeCreatorService.cs  ThemeCreatorViewModel.cs  (+2 more)
(+513 files in other folders)
